[gd_scene load_steps=2 format=3 uid="uid://b58muftj2st80"]

[ext_resource type="Script" path="res://src/SocioExtract.gd" id="1_xkoy2"]

[node name="SocioExtract" type="Node"]
script = ExtResource("1_xkoy2")

[node name="MemoryUsage" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -21.5
offset_top = -23.0
offset_right = 21.5
grow_horizontal = 2
grow_vertical = 0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -20.0
offset_right = -72.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LoadSocioFile" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -84.0
offset_right = 163.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 2
text = "Extract .BIN/.HD
"

[node name="DecompressFiles" type="CheckBox" parent="Control"]
layout_mode = 0
offset_left = -56.0
offset_top = -8.0
offset_right = 207.0
offset_bottom = 23.0
button_pressed = true
text = "Decompress Compressed Files"

[node name="LoadBIN" type="FileDialog" parent="."]
title = "Open File(s)"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Open"
file_mode = 1
access = 2
filters = PackedStringArray("SOUND_ID.BIN", "VOICE_ID.BIN", "LIST.BIN", "SYSTEM.BIN", "NORMAL.BIN", "SCENE_ID.BIN", "SCENEDAT.BIN", "SCRIPT.BIN")

[node name="LoadFOLDER" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[connection signal="pressed" from="Control/LoadSocioFile" to="." method="_on_load_socio_file_pressed"]
[connection signal="pressed" from="Control/DecompressFiles" to="." method="_on_decompress_files_pressed"]
[connection signal="files_selected" from="LoadBIN" to="." method="_on_load_bin_files_selected"]
[connection signal="dir_selected" from="LoadFOLDER" to="." method="_on_load_folder_dir_selected"]
